Добавлена форма "Буду смотреть", можно сортировать и фильтровать фильмы в ней, удалять из нее